# mycontext-cukbook

./: .gitignore  README.md  pyproject.toml
content-series/: .env.example  01_prompt_architect_auto.ipynb  01_prompt_architect_auto.md  02_prompt_architect_improve.ipynb  02_prompt_architect_improve.md  03_smart_execute.ipynb  03_smart_execute.md  04_template_selection.ipynb  04_template_selection.md  05_quality_gates.ipynb  05_quality_gates.md  06_multi_template_pipeline.ipynb  06_multi_template_pipeline.md  07_cross_framework.ipynb  07_cross_framework.md  08_executable_skills.ipynb  08_executable_skills.md  README.md
content-series/_demo_skills/basic_skill/: SKILL.md
content-series/_demo_skills/fused_skill/: SKILL.md
content-series/_demo_skills/typed_skill/: SKILL.md
content-series/ui-guides/: 01_pit_stop.md  02_context_studio_wizard_and_copilot.md  03_cognitive_studio_data_analyzer.md  04_chain_composer.md
content-series/video/: 01_prompt_architect_tutorial_transcript.md
